feat(auth): add project secret keys system
