# backend/internal/infra/http/gen/openapi-types.gen.go
@@ -33,6 +33,13 @@ const (
 	UpdateAuthRequestProviderSupabase UpdateAuthRequestProvider = "supabase"
 )
 
+// ApiKey defines model for ApiKey.
+type ApiKey struct {
+	CreatedAt time.Time `json:"createdAt"`
+	Id        UUID      `json:"id"`
+	Key       string    `json:"key"`
+}
+
 // AuthProvider defines model for AuthProvider.
 type AuthProvider struct {
 	Config   map[string]interface{} `json:"config"`
@@ -72,6 +79,7 @@ type Credential struct {
 
 // Project defines model for Project.
 type Project struct {
+	ApiKey       ApiKey       `json:"apiKey"`
 	AuthProvider AuthProvider `json:"authProvider"`
 	CreatedAt    time.Time    `json:"createdAt"`
 	Credentials  []Credential `json:"credentials"`
@@ -86,7 +94,8 @@ type ProviderType string
 
 // TriggerWorkflowRequest defines model for TriggerWorkflowRequest.
 type TriggerWorkflowRequest struct {
-	Inputs map[string]interface{} `json:"inputs"`
+	Inputs    map[string]interface{} `json:"inputs"`
+	TriggerId UUID                   `json:"triggerId"`
 }
 
 // UUID defines model for UUID.
